<resources>

    <string name="app_name">P9E_GourmetEats</string>
    <string name="cas_3_formulaire_de_connexion">Cas 3: Formulaire de connexion</string>
    <string name="cas_2_carte_de_suggestion_de_recettes">Cas 2 : Carte de suggestion de recettes</string>
    <string name="cas_1_bouton_d_ajout_au_panier">Cas 1 : Bouton d\'ajout au panier</string>
    <string name="cas_1">Cas 1 :</string>
    <string name="impossible_d_avoir_une_quantit_n_gative">Impossible d\'avoir une quantité négative</string>
    <string name="cas_2">Cas 2 :</string>
    <string name="cd_ajouter_aux_favoris">Ajouter aux favoris</string>
    <string name="ajouter">Ajouter</string>
    <string name="demo_cookie_text">Cookies au chocolat</string>
    <string name="recette_ajout_au_panier">Recette ajoutée au panier</string>
    <string name="cas_3">Cas 3 :</string>
    <string name="pseudo">Pseudonyme :</string>
    <string name="validate">Valider</string>
    <string name="demo_product_name">Nom du produit</string>
    <string name="remove_button_description">Diminuer la quantité</string>
    <string name="add_button_description">Augmenter la quantité</string>
    <string name="quantity_prefix">Quantité actuelle,</string>
    <string name="new_quantity_announce">Nouvelle quantité,</string>
    <string name="cd_retirer_des_favoris">Retirer_des_favoris</string>
    <string name="addToFavoritesDescription">Ajouter aux favoris</string>
    <string name="removeFromFavoritesDescription">Retirer des favoris</string>
    <string name="addedToFavoritesMessage">Recette ajoutée aux favoris</string>
    <string name="removedFromFavoritesMessage">Recette retirée des favoris</string>
    <string name="nameMinimalLength">Minimum 3 caractères</string>
    <string name="nameValid">Format valide</string>
    <string name="add_to_basket_button_description">Ajouter au panier</string>
    <string name="recipe_card_description">Cookies au chocolat : Ajouter aux favoris et au panier</string>

</resources>