<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Case1Activity">

    <TextView
        android:id="@+id/casTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cas_1"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:gravity="center_vertical"
        android:minHeight="90dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/demo_product_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/removeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:contentDescription="@string/remove_button_description"
            android:src="@drawable/ic_remove" />

        <TextView
            android:id="@+id/quantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="0" />

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:contentDescription="@string/add_button_description"
            android:src="@drawable/ic_add" />

    </LinearLayout>

</LinearLayout>