git <?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Case3Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cas_3"
        android:textSize="40sp" />


    <TextView
        android:id="@+id/pseudoTitle"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/pseudoEdit"
        android:text="@string/pseudo"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/pseudoEdit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="16sp"
        android:autofillHints="username"
        android:inputType="text" />

    <TextView
        android:id="@+id/pseudoValidation"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <Button
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/validate" />

</LinearLayout>