<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Case2Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cas_2"
        android:textSize="40sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/recipeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/recipe_card_description">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:padding="4dp"
            tools:ignore="ContentDescription">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/cookie_with_contrast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#99FFFFFF"
                android:padding="12dp"
                android:src="@drawable/ic_favorite_off"
                app:layout_constraintEnd_toEndOf="@id/productImage"
                app:layout_constraintTop_toTopOf="@id/productImage"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/productTitle"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:importantForAccessibility="yes"
                android:text="@string/demo_cookie_text"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productImage" />

            <Button
                android:id="@+id/addRecipeToBasket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableEnd="@drawable/ic_add"
                android:drawableTint="@color/white"
                android:text="@string/ajouter"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:contentDescription="@string/add_to_basket_button_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productTitle"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>